--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,18 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".BlekingskaSangbokActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".StartActivity" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".ListActivity" />
+        <activity android:name=".AboutActivity" />
 
     </application>
 </manifest>
